--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node src/index"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/lib-storage": "^3.556.0",
+    "aws-sdk": "^2.1605.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -17,7 +20,8 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
